--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,29 +1,58 @@
-<h2>Sign up</h2>
+<div class="w-4/12 mx-auto">
+  <div class="bg-white shadow-md border border-gray-200 rounded-lg p-4">
+    <div class="space-y-6">
+      <h2 class="text-xl font-medium text-gray-900">建立您的 Yimails 帳戶</h2>
 
-<%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
-  <%= render "devise/shared/error_messages", resource: resource %>
+      <%= form_for(resource, as: resource_name, url: user_registration_path) do |f| %>
+        <%= render "devise/shared/error_messages", resource: resource %>
 
-  <div class="field">
-    <%= f.label :email %><br />
-    <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
+        <div class="name_container flex justify-between my-3">
+          <div class="field">
+            <%= f.label :姓氏, class:"text-sm font-medium text-gray-900 mb-2"%><br />
+            <%= f.text_field :lastname, autofocus: true, autocomplete: "lastname", class:"bg-gray-50 border border-gray-300 text-gray-900 sm:text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5"%>
+          </div>
+          <div class="field">
+            <%= f.label :名字, for:"firstname", class:"text-sm font-medium text-gray-900 mb-2"%><br />
+            <%= f.text_field :firstname, autofocus: true, autocomplete: "firstname", class:"bg-gray-50 border border-gray-300 text-gray-900 sm:text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5"%>
+          </div>
+        </div>
+
+        <div class="field my-3">
+          <%= f.label :email, class:"text-sm font-medium text-gray-900 mb-2" %><br />
+          <div class="email_container flex focus:ring-blue-500 focus:border-blue-500 items-center bg-gray-50 border border-gray-300 text-gray-900 sm:text-sm rounded-lg w-full">
+            <%= f.text_field :username, autofocus: true, autocomplete: "username", class:" h-11 border-none bg-transparent flex-grow  p-2.5"%>
+            <p class="mx-2.5 text-base"> @yimails.com </p>
+          </div>
+          <span class="text-xs text-gray-700">您可以使用英文字母與數字</span>
+        </div>
+
+        <div class="password_container my-3">
+          <div class="password_wrap flex justify-between">
+            <div class="field">
+              <%= f.label :設定密碼, class:"text-sm font-medium text-gray-900 mb-2" %>
+              <%= f.password_field :password, autocomplete: "new-password", class:"bg-gray-50 border border-gray-300 text-gray-900 sm:text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 " %>
+            </div>
+            <div class="field">
+              <%= f.label :確認密碼, class:"text-sm font-medium text-gray-900 mb-2" %><br />
+              <%= f.password_field :password_confirmation, autocomplete: "new-password", class:"bg-gray-50 border border-gray-300 text-gray-900 sm:text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5" %>
+            </div>
+          </div>
+          <% if @minimum_password_length %>
+          <span class="text-xs text-gray-700">請混合使用 <%= @minimum_password_length %> 個字元以上的英文字母或數字</span>
+          <% end %><br />
+        </div>
+
+        <div class="field my-3">
+          <%= f.label :備份信箱, for:"backup_email", class:"text-sm font-medium text-gray-900 mb-2"%><br />
+          <%= f.email_field :backup_email, autofocus: true, autocomplete: "backup_email", class:"bg-gray-50 border border-gray-300 text-gray-900 sm:text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5"%>
+        </div>
+
+        <div class="actions my-3">
+          <%= f.submit "註冊", class:"w-full mt-3 text-white bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:ring-blue-300 font-medium rounded-lg text-sm px-5 py-2.5 text-center" %>
+        </div>
+
+      <% end %>
+      <%= render "devise/shared/links" %>
+    </div>
   </div>
-
-  <div class="field">
-    <%= f.label :password %>
-    <% if @minimum_password_length %>
-    <em>(<%= @minimum_password_length %> characters minimum)</em>
-    <% end %><br />
-    <%= f.password_field :password, autocomplete: "new-password" %>
-  </div>
-
-  <div class="field">
-    <%= f.label :password_confirmation %><br />
-    <%= f.password_field :password_confirmation, autocomplete: "new-password" %>
-  </div>
-
-  <div class="actions">
-    <%= f.submit "Sign up" %>
-  </div>
-<% end %>
-
-<%= render "devise/shared/links" %>
+</div>
