adjust: box layout

--- a/app/views/devise/passwords/new.html.erb
+++ b/app/views/devise/passwords/new.html.erb
@@ -1,4 +1,4 @@
-<div class="w-2/5 mx-auto">
+<div class="w-4/12 mx-auto mt-10">
   <div class="bg-white shadow-md border border-gray-200 rounded-lg p-4">
     <form class="space-y-6" action="#">
       <h3 class="text-xl font-medium text-gray-900 dark:text-white">帳戶救援</h3>
