--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,4 +1,4 @@
-<div class="w-4/12 mx-auto">
+<div class="w-4/12 mx-auto mt-10">
   <div class="bg-white shadow-md border border-gray-200 rounded-lg p-4">
     <div class="space-y-6">
       <h2 class="text-xl font-medium text-gray-900">建立您的 Yimails 帳戶</h2>
