--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,7 +1,7 @@
 <div class="h-screen flex">
   <div class="flex w-1/2 bg-gradient-to-tr from-blue-800 to-purple-700 i justify-around items-center">
     <div>
-      <h1 class="text-white font-bold text-9xl font-sans">Yimails</h1>
+      <h1 class="text-white font-bold text-9xl font-sans">Yimail</h1>
     </div>
   </div>
   <div class="flex w-1/2 justify-center items-center bg-white">
