--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,17 +1,9 @@
-<div class="row">
-  <div class="col-sm-6">
+<div>
     <h1>Posts</h1>
-  </div>
-
-  <div class="col-sm-6 text-right">
-  <%= link_to new_post_path, class: 'btn btn-primary' do %>
-    Add New Post
-  <% end %>
-  </div>
 </div>
 
-<div class="table-responsive">
-  <table class="table table-striped table-bordered table-hover">
+<div>
+  <table>
     <thead>
       <tr>
         <th>Title</th>
@@ -22,11 +14,9 @@
 
     <tbody>
       <% @posts.each do |post| %>
-        <%= content_tag :tr, id: dom_id(post), class: dom_class(post) do %>
           <td><%= post.title %></td>
           <td><%= post.body %></td>
           <td><%= link_to 'Show', post %></td>
-        <% end %>
       <% end %>
     </tbody>
   </table>
