--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -2,19 +2,15 @@
   <div class="bg-white shadow-md border border-gray-200 rounded-lg p-4">
     <div class="space-y-6">
       <h2 class="text-xl font-medium text-gray-900">重設密碼</h2>
-
       <%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
         <%= render "devise/shared/error_messages", resource: resource %>
-
-         <div class="field my-3">
+        <div class="field my-3">
           <%= f.label :email, class:"text-sm font-medium text-gray-900 mb-2" %><br />
           <%= f.email_field :email, autofocus: true, autocomplete: "email", class:"bg-gray-50 border border-gray-300 text-gray-900 sm:text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5" %>
         </div>
-
         <% if devise_mapping.confirmable? && resource.pending_reconfirmation? %>
           <div>Currently waiting confirmation for: <%= resource.unconfirmed_email %></div>
         <% end %>
-
         <div class="password_container my-3">
           <div class="password_wrap flex justify-between">
             <div class="field w-2/4 mr-2.5">
@@ -27,7 +23,7 @@
             </div>
           </div>
           <% if @minimum_password_length %>
-          <span class="text-xs text-gray-700">請混合使用 <%= @minimum_password_length %> 個字元以上的英文字母或數字</span>
+            <span class="text-xs text-gray-700">請混合使用 <%= @minimum_password_length %> 個字元以上的英文字母或數字</span>
           <% end %><br />
         </div>
 
@@ -42,10 +38,9 @@
       <% end %>
 
       <div class="w-full flex justify-between">
-      <%= link_to "回上一頁", :back, :class=>"w-1/4 inline-block text-blue-500 border-2 border-blue-500 hover:bg-blue-100 focus:ring-4 focus:ring-blue-300 font-medium rounded-lg text-sm px-5 py-2.5 text-center" %>
-      <%= button_to "刪除帳號", registration_path(resource_name), data: { confirm: "Are you sure?" }, method: :delete, class:"w-full inline-block text-red-500 border-2 border-red-500 hover:bg-red-100 focus:ring-4 focus:ring-blue-300 font-medium rounded-lg text-sm px-5 py-2.5 text-center" %>
+        <%= link_to "回上一頁", :back, :class=>"w-1/4 inline-block text-blue-500 border-2 border-blue-500 hover:bg-blue-100 focus:ring-4 focus:ring-blue-300 font-medium rounded-lg text-sm px-5 py-2.5 text-center" %>
+        <%= button_to "刪除帳號", registration_path(resource_name), data: { confirm: "確定要刪除帳號嗎?" }, method: :delete, class:"w-full inline-block text-red-500 border-2 border-red-500 hover:bg-red-100 focus:ring-4 focus:ring-blue-300 font-medium rounded-lg text-sm px-5 py-2.5 text-center" %>
       </div>
-
     </div>
   </div>
 </div>
