--- a/app/views/letters/_form.html.erb
+++ b/app/views/letters/_form.html.erb
@@ -17,7 +17,7 @@
                   <path fill-rule="evenodd" d="M8 4a4 4 0 100 8 4 4 0 000-8zM2 8a6 6 0 1110.89 3.476l4.817 4.817a1 1 0 01-1.414 1.414l-4.816-4.816A6 6 0 012 8z" clip-rule="evenodd"></path>
                 </svg>
               </div>
-              <input type="text" name="email" id="topbar-search" class="rounded-xl border border-gray-300 text-gray-900 sm:text-sm focus:ring-cyan-600 focus:border-cyan-600 block w-full pl-10 p-2.5" placeholder="<%=t :search_mails, :locale => "en" %>">
+              <input type="text" name="email" id="topbar-search" class="rounded-xl border border-gray-300 text-gray-900 sm:text-sm focus:ring-cyan-600 focus:border-cyan-600 block w-full pl-10 p-2.5" placeholder="<%= "#{t("search_mails")}" %>">
             </div>
           </form>
         </div>
