modify:change user#index bgc to green

--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,5 +1,5 @@
 <div class="h-screen flex">
-  <div class="flex w-1/2 bg-gradient-to-tr from-blue-800 to-purple-700 i justify-around items-center">
+  <div class="flex w-1/2 bg-gradient-to-tr from-green-500 to-green-700 i justify-around items-center">
     <div>
       <h1 class="text-white font-bold text-9xl font-sans">Yimail</h1>
     </div>
