fix:remove the i18n routes and reset English and 中文 link

--- a/app/views/letters/_form.html.erb
+++ b/app/views/letters/_form.html.erb
@@ -21,8 +21,8 @@
             </div>
           </form>
         </div>
-        <li><%= link_to 'English', "http://localhost:3000/en/letters" %></li>
-        <li><%= link_to '中文', "http://localhost:3000/zh-TW/letters" %></li>
+        <li><%= link_to 'English', "http://localhost:3000/letters.2?locale=en" %></li>
+        <li><%= link_to '中文', "http://localhost:3000/letters.2?locale=zh-TW" %></li>
         <div class="flex items-center ">
           <button id="toggleSidebarMobileSearch" type="button" class="lg:hidden text-gray-500 hover:text-gray-900 hover:bg-gray-100 p-2 rounded-lg ">
             <span class="sr-only">Search</span>
