--- a/app/assets/stylesheets/letters.scss
+++ b/app/assets/stylesheets/letters.scss
@@ -1,3 +1,6 @@
 // Place all the styles related to the letters controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: https://sass-lang.com/
+.dropdown:hover > .dropdown-content {
+	display: block;
+}
