--- a/app/views/letters/index.html.erb
+++ b/app/views/letters/index.html.erb
@@ -1,6 +1,6 @@
 <%= render 'form'  %>
 <%# email-content %>
-  <div id="main-content" class="h-full w-full bg-gray-50 relative overflow-y-auto lg:ml-64 ">
+  <div id="main-content" class="h-full w-5/6 bg-gray-50 relative overflow-y-auto lg:ml-64 ">
     <div class="pt-6 px-4 ">
       <div class=" p-4 bg-white block sm:flex items-center justify-between border-b border-gray-200 lg:mt-1.5">
         <div class="flex items-center divide-x divide-gray-100">
@@ -60,7 +60,7 @@
                     <td class="p-4 text-base font-normaltext-gray-900 max-w-sm xl:max-w-screen-md 2xl:max-w-screen-lg truncate overflow-hidden">
                       <%= letter.content %> 
                     </td>
-                    <td class="p-4 whitespace-nowrap text-base font-medium text-gray-700 ">
+                    <td class="p-4 whitespace-nowrap text-base font-medium text-gray-700 text-right">
                       <%= letter.created_at %> 
                     </td>
                   </tr>
