--- a/app/views/letters/_form.html.erb
+++ b/app/views/letters/_form.html.erb
@@ -21,8 +21,8 @@
             </div>
           </form>
         </div>
-        <li><%= link_to 'English', "http://localhost:3000/letters.2?locale=en" %></li>
-        <li><%= link_to '中文', "http://localhost:3000/letters.2?locale=zh-TW" %></li>
+        <li><%= link_to 'English', letters_path %></li>
+        <li><%= link_to '中文', letters_path %></li>
         <div class="flex items-center ">
           <button id="toggleSidebarMobileSearch" type="button" class="lg:hidden text-gray-500 hover:text-gray-900 hover:bg-gray-100 p-2 rounded-lg ">
             <span class="sr-only">Search</span>
