--- a/app/views/letters/show.html.erb
+++ b/app/views/letters/show.html.erb
@@ -1,6 +1,6 @@
-<%= render 'form' %>
+<%= render 'nav' %>
 <%# readmail_layout %>
-<div id="main-content" class="h-full w-full bg-gray-50 relative overflow-y-auto lg:ml-64 ">
+<div id="main-content" class="h-full w-4/5 bg-gray-100 relative overflow-y-auto lg:ml-64 ">
   <div class="pt-6 px-4 ">
     <div class="p-4 bg-white block sm:flex items-center justify-between border-b border-gray-200 lg:mt-1.5">
       <div class="flex items-center divide-x divide-gray-100">
