--- a/app/views/letters/index.html.erb
+++ b/app/views/letters/index.html.erb
@@ -1,6 +1,6 @@
-<%= render 'form'  %>
+<%= render 'nav'  %>
 <%# email-content %>
-  <div id="main-content" class="h-full w-5/6 bg-gray-50 relative overflow-y-auto lg:ml-64 ">
+  <div id="main-content" class="h-full bg-gray-50 relative overflow-y-auto lg:ml-64 ">
     <div class="pt-6 px-4 ">
       <div class=" p-4 bg-white block sm:flex items-center justify-between border-b border-gray-200 lg:mt-1.5">
         <div class="flex items-center divide-x divide-gray-100">
@@ -41,7 +41,7 @@
             <div class="shadow overflow-hidden">
               <table class="table-fixed min-w-full divide-y divide-gray-200">
                 <tbody class="bg-white divide-y divide-gray-200">
-                <% @letters.each do |letter| %> 
+                <% @letters.each do |letter| %>
                   <tr class="hover:bg-gray-100 cursor-pointer" >
                     <td class="p-4 w-4">
                       <div class="inline-flex items-center space-x-4">
@@ -49,7 +49,23 @@
                           <input id="checkbox" aria-describedby="checkbox-1" type="checkbox" class="bg-gray-50 border-gray-300 focus:ring-3 focus:ring-cyan-200 h-4 w-4 rounded" onClick="event.stopPropagation();">
                           <label for="checkbox" class="sr-only">checkbox</label>
                         </div>
-                        <svg onClick="event.stopPropagation();" class="text-gray-500 hover:text-yellow-300 w-6 h-6" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M11.049 2.927c.3-.921 1.603-.921 1.902 0l1.519 4.674a1 1 0 00.95.69h4.915c.969 0 1.371 1.24.588 1.81l-3.976 2.888a1 1 0 00-.363 1.118l1.518 4.674c.3.922-.755 1.688-1.538 1.118l-3.976-2.888a1 1 0 00-1.176 0l-3.976 2.888c-.783.57-1.838-.197-1.538-1.118l1.518-4.674a1 1 0 00-.363-1.118l-3.976-2.888c-.784-.57-.38-1.81.588-1.81h4.914a1 1 0 00.951-.69l1.519-4.674z"></path></svg>
+                        <div data-controller="starmail" 
+                             data-starmail-starred-value="<%= user_signed_in? && current_user %>"
+                             data-starmail-letter-id-value="<%= letter.id %>">  
+                          <div data-action="click->starmail#star" data-starmail-target="btn">
+                          <% if letter.star %>
+                            <svg class="text-yellow-300 w-6 h-6" fill="currentColor" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
+                              <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M11.049 2.927c.3-.921 1.603-.921 1.902 0l1.519 4.674a1 1 0 00.95.69h4.915c.969 0 1.371 1.24.588 1.81l-3.976 2.888a1 1 0 00-.363 1.118l1.518 4.674c.3.922-.755 1.688-1.538 1.118l-3.976-2.888a1 1 0 00-1.176 0l-3.976 2.888c-.783.57-1.838-.197-1.538-1.118l1.518-4.674a1 1 0 00-.363-1.118l-3.976-2.888c-.784-.57-.38-1.81.588-1.81h4.914a1 1 0 00.951-.69l1.519-4.674z">
+                              </path>
+                            </svg>                            
+                          <% else %>
+                            <svg class="text-gray-300 w-6 h-6" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
+                              <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M11.049 2.927c.3-.921 1.603-.921 1.902 0l1.519 4.674a1 1 0 00.95.69h4.915c.969 0 1.371 1.24.588 1.81l-3.976 2.888a1 1 0 00-.363 1.118l1.518 4.674c.3.922-.755 1.688-1.538 1.118l-3.976-2.888a1 1 0 00-1.176 0l-3.976 2.888c-.783.57-1.838-.197-1.538-1.118l1.518-4.674a1 1 0 00-.363-1.118l-3.976-2.888c-.784-.57-.38-1.81.588-1.81h4.914a1 1 0 00.951-.69l1.519-4.674z">
+                              </path>
+                            </svg>
+                          <% end %> 
+                          </div>
+                        </div>
                       </div>
                     </td>
                     <td class="p-4 flex items-center whitespace-nowrap space-x-4">
