--- a/app/views/letters/partial/_email_content.html.erb
+++ b/app/views/letters/partial/_email_content.html.erb
@@ -26,15 +26,9 @@
                 <li><%= link_to '建立標籤', new_label_path, class:"rounded-b bg-gray-200 hover:bg-gray-400 py-2 px-4 block whitespace-no-wrap" %></li>
               </ul>
             </div>
-
             <%# 更多選項 %>
             <a href="#" class="text-gray-500 hover:text-gray-900 cursor-pointer p-1 hover:bg-gray-100 rounded inline-flex justify-center">
               <svg class="w-6 h-6" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg"><path d="M10 6a2 2 0 110-4 2 2 0 010 4zM10 12a2 2 0 110-4 2 2 0 010 4zM10 18a2 2 0 110-4 2 2 0 010 4z"></path></svg>
-            </a>
-          </div>
-          <div class="pl-3">
-            <a href="#" class="text-white bg-cyan-600 hover:bg-cyan-700 focus:ring-4 focus:ring-cyan-200 font-medium rounded-lg text-sm px-5 py-2.5 text-center inline-flex items-center mr-3">
-              <svg class="-ml-1 mr-2 h-5 w-5" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg"><path fill-rule="evenodd" d="M10 5a1 1 0 011 1v3h3a1 1 0 110 2h-3v3a1 1 0 11-2 0v-3H6a1 1 0 110-2h3V6a1 1 0 011-1z" clip-rule="evenodd"></path></svg>
             </a>
           </div>
         </div>
@@ -53,54 +47,51 @@
           <div class="align-middle inline-block min-w-full">
             <div class="shadow overflow-hidden">
               <% letters.each do |letter| %>
-                <div class="w-full letter_container flex hover:bg-gray-100 border">
-                  <%# checkbox %>
-                  <div class="flex w-10 mr-2 items-center justify-center">
-                    <input id="checkbox" aria-describedby="checkbox-1" type="checkbox" 
-                           class=" bg-gray-50 border-gray-300 focus:ring-3 focus:ring-cyan-200 h-4 w-4 rounded" onClick="event.stopPropagation();">
-                    <label for="checkbox" class="sr-only">checkbox</label>
-                  </div>
-                  <%# 星星 %>
-                  <div class="mr-2 flex items-center justify-center"
-                       data-controller="starmail"
-                       data-starmail-starred-value="<%= user_signed_in? && current_user %>"
-                       data-starmail-letter-id-value="<%= letter.id %>">
-                    <div data-action="click->starmail#star" data-starmail-target="btn" >
-                    <% if letter.star %>
-                      <svg class="text-yellow-300 w-6 h-6 "  fill="currentColor" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
-                        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M11.049 2.927c.3-.921 1.603-.921 1.902 0l1.519 4.674a1 1 0 00.95.69h4.915c.969 0 1.371 1.24.588 1.81l-3.976 2.888a1 1 0 00-.363 1.118l1.518 4.674c.3.922-.755 1.688-1.538 1.118l-3.976-2.888a1 1 0 00-1.176 0l-3.976 2.888c-.783.57-1.838-.197-1.538-1.118l1.518-4.674a1 1 0 00-.363-1.118l-3.976-2.888c-.784-.57-.38-1.81.588-1.81h4.914a1 1 0 00.951-.69l1.519-4.674z">
-                        </path>
-                      </svg>
-                    <% else %>
-                      <svg class="text-gray-400 w-6 h-6 hover:text-yellow-300" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
-                        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M11.049 2.927c.3-.921 1.603-.921 1.902 0l1.519 4.674a1 1 0 00.95.69h4.915c.969 0 1.371 1.24.588 1.81l-3.976 2.888a1 1 0 00-.363 1.118l1.518 4.674c.3.922-.755 1.688-1.538 1.118l-3.976-2.888a1 1 0 00-1.176 0l-3.976 2.888c-.783.57-1.838-.197-1.538-1.118l1.518-4.674a1 1 0 00-.363-1.118l-3.976-2.888c-.784-.57-.38-1.81.588-1.81h4.914a1 1 0 00.951-.69l1.519-4.674z">
-                        </path>
-                      </svg>
-                    <% end %>
-                    </div>
-                  </div>
-                  <%# 信件摘要 %>
-                  <div class="w-full">
-                    <%= link_to letter_path(letter.id) do %>
-                      <div class="w-full flex justify-items-center">
-                        <div class="w-1/6 p-4 items-center whitespace-nowrap space-x-4 text-base font-semibold text-gray-900">
-                          <%= letter.user.username %>
-                        </div>
-                        <div class="w-4/6 flex p-4 text-base text-gray-900 truncate overflow-hidden">
-                          <span class="font-bold mr-2">
-                            <%= letter.subject %> -
-                          </span>
-                          <span  class="font-light">
-                            <%= letter.body %>
-                          </span>
-                        </div>
-                        <div class="ml-auto p-4 pr-10 text-base font-normal text-gray-900 max-w-sm xl:max-w-screen-md 2xl:max-w-screen-lg truncate overflow-hidden">
-                          <%= letter.created_at.strftime("%Y/%m/%d") %>
-                        </div>
-                      </div>
-                    <% end %>
+              <div class="w-full letter_container flex hover:bg-gray-100 border">
+                <%# checkbox %>
+                <div class="flex w-10 mr-2 items-center justify-center">
+                  <input id="checkbox" aria-describedby="checkbox-1" type="checkbox" 
+                          class=" bg-gray-50 border-gray-300 focus:ring-3 focus:ring-cyan-200 h-4 w-4 rounded" onClick="event.stopPropagation();">
+                  <label for="checkbox" class="sr-only">checkbox</label>
+                </div>
+                <%# 星星 %>
+                <div class="mr-2 flex items-center justify-center"
+                      data-controller="starmail"
+                      data-starmail-starred-value="<%= user_signed_in? && current_user %>"
+                      data-starmail-letter-id-value="<%= letter.id %>">
+                  <div data-action="click->starmail#star" data-starmail-target="btn" >
+                  <% if letter.star %>
+                    <svg class="text-yellow-300 w-6 h-6 "  fill="currentColor" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
+                      <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M11.049 2.927c.3-.921 1.603-.921 1.902 0l1.519 4.674a1 1 0 00.95.69h4.915c.969 0 1.371 1.24.588 1.81l-3.976 2.888a1 1 0 00-.363 1.118l1.518 4.674c.3.922-.755 1.688-1.538 1.118l-3.976-2.888a1 1 0 00-1.176 0l-3.976 2.888c-.783.57-1.838-.197-1.538-1.118l1.518-4.674a1 1 0 00-.363-1.118l-3.976-2.888c-.784-.57-.38-1.81.588-1.81h4.914a1 1 0 00.951-.69l1.519-4.674z">
+                      </path>
+                    </svg>
+                  <% else %>
+                    <svg class="text-gray-400 w-6 h-6 hover:text-yellow-300" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
+                      <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M11.049 2.927c.3-.921 1.603-.921 1.902 0l1.519 4.674a1 1 0 00.95.69h4.915c.969 0 1.371 1.24.588 1.81l-3.976 2.888a1 1 0 00-.363 1.118l1.518 4.674c.3.922-.755 1.688-1.538 1.118l-3.976-2.888a1 1 0 00-1.176 0l-3.976 2.888c-.783.57-1.838-.197-1.538-1.118l1.518-4.674a1 1 0 00-.363-1.118l-3.976-2.888c-.784-.57-.38-1.81.588-1.81h4.914a1 1 0 00.951-.69l1.519-4.674z">
+                      </path>
+                    </svg>
+                  <% end %>
                   </div>
                 </div>
+                <%# 信件摘要 %>
+                <div class="w-full">
+                  <%= link_to letter_path(letter.id) do %>
+                    <div class="w-full flex justify-items-center">
+                      <div class="w-1/6 p-4 items-center whitespace-nowrap space-x-4 text-base font-semibold text-gray-900">
+                        <%= letter.user.username %>
+                      </div>
+                      <div class="w-4/6 flex p-4 text-base text-gray-900 truncate overflow-hidden">
+                        <span class="font-bold mr-2">
+                          <%= letter.subject %>
+                        </span>
+                      </div>
+                      <div class="ml-auto p-4 pr-10 text-base font-normal text-gray-900 max-w-sm xl:max-w-screen-md 2xl:max-w-screen-lg truncate overflow-hidden">
+                        <%= letter.created_at.strftime("%Y/%m/%d") %>
+                      </div>
+                    </div>
+                  <% end %>
+                </div>
+              </div>
               <% end %> 
             </div>
           </div>
