--- a/app/views/letters/sendmail.html.erb
+++ b/app/views/letters/sendmail.html.erb
@@ -1,2 +1,2 @@
-<%= render 'nav' %>
-<%= render 'email-content', letters: @letters %>
+<%= render "letters/partial/navbar" %>
+<%= render "letters/partial/email_content", letters: @letters %>
