--- a/app/views/letters/partial/_email_content.html.erb
+++ b/app/views/letters/partial/_email_content.html.erb
@@ -90,7 +90,7 @@
                         <div class="w-1/6 p-4 items-center whitespace-nowrap space-x-4 text-base font-semibold text-gray-900">
                           <%= letter.user.username %>
                         </div>
-                        <div class="add_label_tag w-4/6 flex p-4 text-base text-gray-900 truncate overflow-ellipsis">
+                        <div class="w-4/6 flex p-4 text-base text-gray-900 truncate overflow-ellipsis">
                           <div class="font-bold mr-2">
                             <%= letter.subject %> -
                           </div>
