--- a/app/views/letters/partial/_navbar.html.erb
+++ b/app/views/letters/partial/_navbar.html.erb
@@ -97,15 +97,18 @@
                 </div>
               <% end %>
             </li>
-            <li>
             <%# 標籤 %>
-              <a href="#" class="text-base text-gray-900 font-normal rounded-lg hover:bg-gray-100 flex items-center p-2 group ">
-                <svg xmlns="http://www.w3.org/2000/svg" class="w-6 h-6 text-gray-500 flex-shrink-0 group-hover:text-gray-900 transition duration-75" viewBox="0 0 20 20" fill="currentColor">
-                  <path fill-rule="evenodd" d="M17.707 9.293a1 1 0 010 1.414l-7 7a1 1 0 01-1.414 0l-7-7A.997.997 0 012 10V5a3 3 0 013-3h5c.256 0 .512.098.707.293l7 7zM5 6a1 1 0 100-2 1 1 0 000 2z" clip-rule="evenodd" />
-                </svg>
-                <span class="ml-3 flex-1 whitespace-nowrap"><%= "#{t("label")}" %></span>
-              </a>
-            </li>
+            <li>
+              <% labels.each do |label| %>
+               <a href="/labels/<%= label.id %>" class="text-base text-gray-900 font-normal rounded-lg hover:bg-gray-100 flex items-center p-2 group" data-id='<%= label.id %>'>
+                 <%= %>
+                 <svg xmlns="http://www.w3.org/2000/svg" class="w-6 h-6 text-gray-500 flex-shrink-0 group-hover:text-gray-900 transition duration-75" viewBox="0 0 20 20" fill="currentColor">
+                   <path fill-rule="evenodd" d="M17.707 9.293a1 1 0 010 1.414l-7 7a1 1 0 01-1.414 0l-7-7A.997.997 0 012 10V5a3 3 0 013-3h5c.256 0 .512.098.707.293l7 7zM5 6a1 1 0 100-2 1 1 0 000 2z" clip-rule="evenodd" />
+                 </svg>
+                <span class="ml-3 flex-1 whitespace-nowrap"><%= label.title %></span>
+               </a>
+              <% end %>
+             </li>
             <%# 垃圾桶 %>
             <li>
               <%= link_to trash_letters_path do %>
@@ -125,7 +128,7 @@
               </svg>
               <span class="ml-4"><%= "#{t("5xruby")}" %></span>
             </a>
-            <div class="flex item-center text-base text-gray-900 font-normal rounded-lg hover:bg-gray-100 group transition duration-75 flex items-center p-2">
+            <div class="flex item-center text-base text-gray-900 font-normal rounded-lg hover:bg-gray-100 group transition duration-75 items-center p-2">
               <svg class="w-6 h-6 text-gray-500 flex-shrink-0 group-hover:text-gray-900 transition duration-75" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg">
                 <path d="M9 2a1 1 0 000 2h2a1 1 0 100-2H9z"></path>
                 <path fill-rule="evenodd" d="M4 5a2 2 0 012-2 3 3 0 003 3h2a3 3 0 003-3 2 2 0 012 2v11a2 2 0 01-2 2H6a2 2 0 01-2-2V5zm3 4a1 1 0 000 2h.01a1 1 0 100-2H7zm3 0a1 1 0 000 2h3a1 1 0 100-2h-3zm-3 4a1 1 0 100 2h.01a1 1 0 100-2H7zm3 0a1 1 0 100 2h3a1 1 0 100-2h-3z" clip-rule="evenodd"></path>
