--- a/app/views/letters/sendmail.html.erb
+++ b/app/views/letters/sendmail.html.erb
@@ -1,2 +1,2 @@
-<%= render "letters/partial/navbar" %>
+<%= render "letters/partial/navbar", labels: @label_folder %>
 <%= render "letters/partial/email_content", letters: @letters %>
