--- a/app/views/letters/show.html.erb
+++ b/app/views/letters/show.html.erb
@@ -1,4 +1,4 @@
-<%= render "letters/partial/navbar" %>
+<%= render "letters/partial/navbar", labels: @label_folder %>
 <%# readmail_layout %>
 <div id="main-content" class="h-screen w-5/6 ml-auto bg-gray-50 relative overflow-y-auto">
   <div class="pt-6 px-4">
