feat:mail reply&forwarded

--- a/app/views/letters/new.js.erb
+++ b/app/views/letters/new.js.erb
@@ -10,4 +10,4 @@ remove.addEventListener("click", () => {
   }
 })
 
-content.innerHTML = ` <%= j render 'new', letter: @letter %>`
+content.innerHTML = ` <%= j render 'letters/partial/new_letter', letter: @letter %>`
