--- a/app/views/letters/reply.html.erb
+++ b/app/views/letters/reply.html.erb
@@ -1,37 +1,1 @@
-<div class="max-w-2xl mx-auto">
-  <%= form_with(model: @letter) do |form| %>
-    <div class="md:flex items-center mt-8">
-      <div class="w-full flex flex-col">
-        <%= form.label :收件者, for:"recipient", class:"font-semibold leading-none" %>
-        <%= form.text_field :recipient ,type:"text", class:"leading-none text-gray-900 p-3 focus:outline-none focus:border-blue-700 mt-4 bg-gray-100 border rounded border-gray-200" %>
-      </div>
-    </div>
-    <div class="md:flex items-center mt-8">
-      <div class="w-full flex flex-col">
-        <%= form.label :副本, for:"carbon_copy", class:"font-semibold leading-none" %>
-        <%= form.text_field :carbon_copy ,type:"text", class:"leading-none text-gray-900 p-3 focus:outline-none focus:border-blue-700 mt-4 bg-gray-100 border rounded border-gray-200" %>
-      </div>
-    </div>
-    <div class="md:flex items-center mt-8">
-      <div class="w-full flex flex-col">
-        <%= form.label :密件副本, for:"blind_carbon_copy", class:"font-semibold leading-none" %>
-        <%= form.text_field :blind_carbon_copy ,type:"text", class:"leading-none text-gray-900 p-3 focus:outline-none focus:border-blue-700 mt-4 bg-gray-100 border rounded border-gray-200" %>
-      </div>
-    </div>
-    <div class="md:flex items-center mt-8">
-      <div class="w-full flex flex-col">
-        <%= form.label :主旨, for:"subject", class:"font-semibold leading-none" %>
-        <%= form.text_field :subject ,type:"text", class:"leading-none text-gray-900 p-3 focus:outline-none focus:border-blue-700 mt-4 bg-gray-100 border rounded border-gray-200" %>
-      </div>
-    </div>
-    <div class="md:flex items-center mt-8">
-      <div class="w-full flex flex-col">
-        <%= form.label :內容, for:"content", class:"font-semibold leading-none" %>
-        <%= form.rich_text_area :content ,type:"text", class:"leading-none text-gray-900 p-3 focus:outline-none focus:border-blue-700 mt-4 bg-gray-100 border rounded border-gray-200" %>
-      </div>
-    </div>
-    <div class="flex items-center justify-center w-full">
-      <%= form.submit :傳送, class:"mt-9 font-semibold leading-none text-white py-4 px-10 bg-blue-700 rounded hover:bg-blue-600 focus:ring-2 focus:ring-offset-2 focus:ring-blue-700 focus:outline-none" %>
-    </div>
-  <% end %>
-</div>
+<%= render "letters/partial/new_letter", letters: @letters %>
